example website page indev

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -5,12 +5,13 @@
    "id": "5c3a2611-06dd-4053-b069-41383934eb06",
    "metadata": {},
    "source": [
-    "# test file"
+    "# This is my sample .ipynb file!\n",
+    "This could be your analyses files, your visualization files, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "291f8224-eda6-4cf5-8a4d-16568fd04256",
    "metadata": {},
    "outputs": [
@@ -18,12 +19,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "Hello FIN 377 class!\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "print('Hello FIN 377 class!')"
    ]
   }
  ],
